fix figcaption vertical alignment in galleries

--- a/assets/css/core/media.scss
+++ b/assets/css/core/media.scss
@@ -74,6 +74,7 @@ object {
 	width: 100%;
 	justify-content: center;
 	margin: 0;
+	align-items: flex-start;
 
 	.gallery-icon {
 		width: 100%;
@@ -86,6 +87,7 @@ object {
 	.gallery-caption {
 		font-size: 0.85em;
 		width: 100%;
+		height: 100%;
 	}
 }
 
